# Axon

./: .gitignore
Server/: .env
app/: .dockerignore  .env  dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/components/: navbar.tsx  sessionprovider.tsx
app/src/app/dashboard/: layout.tsx  page.tsx
app/src/app/dashboard/notes/: page.tsx
app/src/app/dashboard/notes/editor/[id]/: page.tsx
app/src/app/dashboard/quiz/: page.tsx
app/src/app/dashboard/stats/: page.tsx
app/src/app/dashboard/youtube/: page.tsx
app/src/app/dashboard/youtube/[id]/: page.tsx
app/src/app/home/: layout.tsx  page.tsx
app/src/app/home/youtube/: page.tsx
app/src/app/home/youtube/[id]/: page.tsx
app/src/app/hooks/: useSession.ts
app/src/app/login/: page.tsx
app/src/app/signup/: page.tsx
app/src/app/utils/: axiosInstance.ts
app/src/components/: NoteEditor.tsx  TapEditor.tsx  chat.tsx  dash_recent_notes.tsx  dash_recent_videos.tsx  feature-card.tsx  markdown.tsx  navbar.tsx  note.tsx  quiz.tsx  sessionprovider.tsx  tiptap.css  yt_summary_library.tsx
app/src/components/ui/: app-sidebar.tsx
app/supabase/functions/fetch_transcript/: index.ts
axon/: package-lock.json  package.json
axon/src/app/: page.tsx
axon/src/app/Components/: ask.tsx  pdf.tsx
backend/: dockerfile  main.py  pyproject.toml
backend/routers/auth/: auth_router.py
backend/routers/ingest/: ingest_router.py
backend/routers/service/: service_router.py
backend/service/: yt_transcript.py
backend/utils/: get_session_token.py  logger.py
client/: package-lock.json
client/src/: App.jsx
client/src/components/: file.jsx
server/: server.py
server/chroma_db/: chroma.sqlite3
