[tool.poetry]
name = "axon"
version = "0.1.0"
description = ""
authors = ["Elton Costa <89019551+ryzxxn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
google-generativeai = "^0.8.3"
uvicorn = "^0.34.0"
supabase = "^2.11.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
